LU-191 mdd_close always set atime even it's same

mdd_close always set atime even new atime is exactly same as old one,
this will impact performance of those shortly open/close applications
and tests because of unnecessary transaction.

Change-Id: Ib408dd238fca2e8a736aff1874e243f0d26894b0
Signed-off-by: Liang Zhen <liang@whamcloud.com>
Reviewed-on: http://review.whamcloud.com/396
Tested-by: Hudson
Reviewed-by: Mikhail Pershin <tappro@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>